<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/organizer_blue"
                android:showDividers="middle"
                android:stretchColumns="*"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/event_title_label"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="Event Name"
                        android:textColor="#000000"
                        android:textSize="35dp" />

                </TableRow>

            </TableLayout>

            <ImageButton
                android:id="@+id/edit_title_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_icon"
                app:layout_constraintBottom_toBottomOf="@+id/event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="@+id/event_name"
                android:layout_gravity="end"/>


        <TextView
            android:id="@+id/event_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date:"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_name" />

        <TextView
            android:id="@+id/event_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Time:"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_date_label" />

        <TextView
            android:id="@+id/event_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Location:"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_time_label" />

        <TextView
            android:id="@+id/event_deadline_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Deadline:"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_location_label" />

        <ImageButton
            android:id="@+id/edit_dtl_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/edit_icon"
            app:layout_constraintBottom_toBottomOf="@+id/event_deadline_label"
            app:layout_constraintStart_toEndOf="@+id/event_deadline_label"
            android:layout_gravity="end"/>

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/event_description_box"
            android:gravity="top|start"
            android:hint="Event Description"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_deadline_label" />

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/event_description"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:id="@+id/upload_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="Upload Poster" />
                <Button
                    android:id="@+id/delete_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="Delete Poster" />
            </TableRow>

        </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>