...

            <Button
                android:id="@+id/event_view_button"
                android:layout_width='0dp'
                android:layout_weight="0.75"
                android:background="@drawable/event_view_button"
                android:text="View"
                android:textColor="@color/organizer_blue">

            </Button>
        </TableRow>

    </TableLayout>


    <!-- TEMPORARY ADD BUTTON -->
    <Button
        android:id="@+id/add_button_bottom"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/organizer_button"
        android:text="ADD"
        app:layout_constraintBottom_toTopOf="@id/back_button_bottom"
...
