<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".models.organizer.EditEventTitleFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/event_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Title" />

</FrameLayout>